--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ transition: 0.3s all linear;
 .tophead a:hover{
 color: #fff;
 }
-.navbar{
-box-shadow: 2px 3px #888888;
-}
+
+/*
 .body-content{
 width: 100%;
 height: 100vh;
@@ -32,12 +31,41 @@ background-image: url("web5.jpeg");
 background-repeat: no-repeat;
 background-position: center;
 }
+*/
 #booking{
 width: 100%;
 background: #1f4037;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+.extra-div h2{
+	font-size: 1.3rem;
+	margin: 20px 0 15px 0;
+	font-weight: bold;
+	line-height: 1.1;
+	word-spacing: 4px;
+}
+
+.header-extra{
+	width: 100%;
+	height: auto;
+	margin: 100px auto;
+	text-align: center;
+
+}
+.extra-div{
+	background: #fff;
+	border: medium none;
+	padding: 50px !important;
+	
+	border-radius: 3px;
+	transition: 0.3s;
+}
+.extra-div:hover{
+	box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+	transform: translateY(-20px);
+}
+
 .comment{
 background: #0f0c29;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to top, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
